k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeport-api
  labels:
    app: homeport-api
    component: api
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: homeport-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
