k8s/base/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    component: queue
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
